# gtw-recrypt

./: .dockerignore  .gitmodules  Cargo.toml  Makefile  README.md
compute/: Cargo.toml  Makefile  build.rs
compute/benches/: recrypt_benchmark.rs  transform_benchmark.rs
compute/proto/: recrypt.proto  rencrypt.proto
compute/src/: crypto.rs  lib.rs  macros.rs  main.rs  server.rs
compute/src/crypto/: crypto480.rs  mod.rs  signature.rs
compute/src/crypto/encryption/: aes.rs  mod.rs  recrypt.rs  recrypt480.rs
compute/src/grpc/: encodings.rs  mod.rs  recrypt_operator.rs  rencrypt_operator.rs  tests.rs
compute/tests/: crypto.rs  crypto_test.rs
docker/: Dockerfile
