[package]
name = "recrypt-compute"
version = "0.1.0"
edition = "2021"
build = "build.rs"
default-run = "server"

[dependencies]
aes-gcm = "0.10.3"
base64 = "0.22.1"
bincode = "1.3.3"
gridiron = "0.10.0"
once_cell = "1.20.2"
prost = "0.13.3"
recrypt = { path = "../recrypt" }
serde = { version = "1.0.214", features = [
	"serde_derive",
	"derive",
	"rc",
	"alloc",
] }
serde_json = "1.0.132"
thiserror = "1.0.65"
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.12.3"
tonic-reflection = { version = "0.12.3", features = ["server"] }

[build-dependencies]
tonic-build = "0.12.3"

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.5"

[[bench]]
name = "transform_benchmark"
harness = false

[[bench]]
name = "recrypt_benchmark"
harness = false

[[bin]]
name = "server"
path = "src/main.rs"
